# sm_online_utils

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
converter/: CMakeLists.txt
converter/include/: FDC1DataProcessor.hh  NEBULADataProcessor.hh
converter/sources/converters/: CMakeLists.txt  fdc2_converter.cc  plastics_converter.cc
converter/sources/processors/: BDCDataProcessor.hh  CMakeLists.txt  FDC1DataProcessor.cc  FSDBSDDataProcessor.hh  PPACDataProcessor.hh  PlasticDataProcessor.cc
converter/src/: CoinDataProcessor.cc  PDCDataProcessor.cc
filters/: DataMergeFilter_CATANA.cc
lib/smconverter/: BDCDataProcessor.cc  BDCDataProcessor.hh  CATANADataProcessor.cc  CATANADataProcessor.hh  CoinDataProcessor.cc  CoinDataProcessor.hh  FDC0DataProcessor.cc  FDC0DataProcessor.hh  FDC1DataProcessor.cc  FDC2DataProcessor.cc  FDCDataProcessor.cc  FDCDataProcessor.hh  FSDBSDDataProcessor.cc  FSDBSDDataProcessor.hh  HODPlaDataProcessor.cc  HODPlaDataProcessor.hh  Makefile  NEBULADataProcessor.cc  NEBULADataProcessor.hh  NINJADataProcessor.cc  NINJADataProcessor.hh  PDCDataProcessor.cc  PDCDataProcessor.hh  PlasticDataProcessor.cc  PlasticDataProcessor.hh  SAMURAIDataConverter.cc  SAMURAIDataConverter.hh  SAMURAIDataProcessor.hh
lib/smfilter/: DataMergeFilter.hh
macros/: .root_hist  chkpla.cc  make_dctdcdists.cc  make_dctdcdists_multi.cc
prev/filters/: DataMergeFilter.cc
prev/s047/converters/: fdc1_converter.cc  fdc2_converter.cc  pdc_converter.cc  plastics_converter.cc
prev/s047/macros/: chkmerge.cc
prev/s053/converters/: bdc_converter.cc  plastics_converter.cc
prev/s053/onlinemonitor/: OnlineMonitor.cc
prev/s057/: .root_hist
prev/s057/macros/: make_dctdcdists_cc_ACLiC_dict_rdict.pcm
prev/s057/onlineconverter/: OnlineConverter.cc.251010  OnlineConverter.cc.251010-2  OnlineConverter.cc.251209  OnlineConverter.hh.251208  OnlineConverter.hh.251209
prev/s057/onlinemonitor/: OnlineMonitor.cc
s047/converters/: Makefile  bdc_converter.cc  fdc1_converter.cc  fdc2_converter.cc  pdc_converter.cc  plastics_converter.cc  smts_converter.cc
s047/onlinemonitor/: OnlineMonitor.cc  OnlineMonitor.hh
s053/beamfocusing/: OnlineMonitor.cc  OnlineMonitor.hh
s053/converters/: Makefile  bdc_converter.cc  nebula_converter  nebula_converter.cc  pdc_converter.cc  plastics_converter.cc  smts_converter  smts_converter.cc
s053/filters/: Makefile  catana_data_filter.cc  pfad_data_filter.cc
s053/macros/: catana_run.cc  pfad_run.cc
s053/onlinemonitor/: OnlineMonitor.cc  OnlineMonitor.cc~  OnlineMonitor.hh  OnlineMonitor.hh~  OnlineMonitor_cc.d  testkeyinput.cc  testkeyinput.cc~  testkeyinput_cc.d
s057/: online.C
s057/converters/: dc_converter.cc
s057/macros/: make_dctdcdists_multi_cc_ACLiC_dict_rdict.pcm  pfad_filter_run.cc
s057/onlineconverter/: OnlineConverter.cc  OnlineConverter.cc.251208  OnlineConverter_cc_ACLiC_dict_rdict.pcm
s057/onlinemonitor/: .root_hist  OnlineMonitor.hh  OnlineMonitor_cc_ACLiC_dict_rdict.pcm
smconverter/: CMakeLists.txt
smconverter/apps/: bdc_converter.cc  fdc1_converter.cc  fdc2_converter.cc  ninja_converter.cc  pdc_converter.cc  plastics_converter.cc  smts_converter.cc  smtscoin_converter.cc
smconverter/include/: BDCDataProcessor.hh  CATANADataProcessor.hh  CoinDataProcessor.hh  FDC1DataProcessor.hh  FDC2DataProcessor.hh  HIMEVETODataProcessor.hh  PDCDataProcessor.hh  PPACDataProcessor.hh  PlasticDataProcessor.hh
smconverter/src/: BDCDataProcessor.cc  CATANADataProcessor.cc  FDC1DataProcessor.cc  FDC2DataProcessor.cc  HIMEVETODataProcessor.cc  HODPlaDataProcessor.cc  PPACDataProcessor.cc  PlasticDataProcessor.cc  SAMURAIDataConverter.cc
sources/: CMakeLists.txt
sources/smconverter/: BDCDataProcessor.cc  BDCDataProcessor.hh  CATANADataProcessor.cc  CMakeLists.txt  FDC0DataProcessor.cc  FDC1DataProcessor.cc  FDC1DataProcessor.hh  FDC2DataProcessor.cc  FDC2DataProcessor.hh  FSDBSDDataProcessor.cc  HODPlaDataProcessor.cc  NEBULADataProcessor.cc  PDCDataProcessor.cc  PDCDataProcessor.hh  PPACDataProcessor.cc  PlasticDataProcessor.hh  SAMURAIDataConverter.cc  SAMURAITSDataProcessor.cc  SAMURAITSDataProcessor.hh
sources/smfilter/: DataMergeFilter_CATANA.hh  DataMergeFilter_PFAD.cc  DataMergeFilter_PFAD.hh  Makefile
